# libsplinter

./: .gitignore  .gitkeep  BUILDING.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.v4.md  SECURITY.md  build.h  config.h  configure  sidecar.c  splainference.cpp  splinference.cpp  splinter.c  splinter.h  splinter_chi_sao.c  splinter_cli.h  splinter_cli_cmd_append.c  splinter_cli_cmd_bind.c  splinter_cli_cmd_bump.c  splinter_cli_cmd_caps.c  splinter_cli_cmd_config.c  splinter_cli_cmd_export.c  splinter_cli_cmd_get.c  splinter_cli_cmd_ingest.c  splinter_cli_cmd_init.c  splinter_cli_cmd_label.c  splinter_cli_cmd_list.c  splinter_cli_cmd_lua.c  splinter_cli_cmd_math.c  splinter_cli_cmd_orders.c  splinter_cli_cmd_retrain.c  splinter_cli_cmd_search.c  splinter_cli_cmd_shard.c  splinter_cli_cmd_type.c  (+15 more)
.claude/: CLAUDE.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bindings/rust/: Cargo.toml  README.md
bindings/rust/libsplinter-persist-sys/: Cargo.toml  README.md  build.rs
bindings/rust/libsplinter-persist-sys/csrc/: build.h  splinter.h
bindings/rust/libsplinter-persist-sys/src/: lib.rs
bindings/rust/libsplinter-sys/: Cargo.toml  README.md  build.rs
bindings/rust/libsplinter-sys/csrc/: config.h  splinter.c
bindings/rust/libsplinter-sys/src/: lib.rs
bindings/rust/memory/: Cargo.toml  build.rs
bindings/rust/memory/src/: bindings.rs
bindings/rust/persistent/: Cargo.toml  build.rs
bindings/rust/persistent/src/: bindings.rs
bindings/ts/: bun_checks.ts  ffi_types.ts  splinter.class.ts  splinter.class_tests.ts  splinter.ts  splinter_test.ts
changelogs/: 1.2.0.md
docs/: _config.ts  _data.json  _plugins.ts  deno.json  environment.md  index.md
docs/_includes/: footer.njk
docs/_includes/partials/: footer.njk
docs/api/: index.md  splinter_append.md  splinter_bump_slot.md  splinter_client_set_tandem.md  splinter_client_unset_tandem.md  splinter_close.md  splinter_config_clear.md  splinter_config_set.md  splinter_config_snapshot.md  splinter_config_test.md  splinter_create.md  splinter_create_or_open.md  splinter_enumerate_matches.md  splinter_event_bus_close.md  splinter_event_bus_get_dirty.md  splinter_event_bus_init.md  splinter_event_bus_open.md  splinter_event_bus_wait.md  splinter_get.md  splinter_get_embedding.md  splinter_get_epoch.md  splinter_get_header_snapshot.md  splinter_get_mop.md  splinter_get_raw_ptr.md  splinter_get_signal_count.md  splinter_get_slot_snapshot.md  splinter_integer_op.md  splinter_list.md  splinter_madvise.md  splinter_now.md  splinter_open.md  splinter_open_numa.md  splinter_open_or_create.md  splinter_poll.md  splinter_pulse_keygroup.md  splinter_pulse_watchers.md  splinter_purge.md  splinter_retrain_slot.md  splinter_set.md  splinter_set_as_system.md  (+21 more)
docs/bindings/: index.md  java.md  lua.md  python.md  rust.md  shell.md  typescript.md
docs/cli/: index.md  splinterctl_append.md  splinterctl_bind.md  splinterctl_bump.md  splinterctl_caps.md  splinterctl_clear.md  splinterctl_cls.md  splinterctl_config.md  splinterctl_export.md  splinterctl_get.md  splinterctl_head.md  splinterctl_help.md  splinterctl_hist.md  splinterctl_ingest.md  splinterctl_init.md  splinterctl_label.md  splinterctl_list.md  splinterctl_lua.md  splinterctl_math.md  splinterctl_orders.md  splinterctl_retrain.md  splinterctl_search.md  splinterctl_set.md  splinterctl_shard.md  splinterctl_type.md  splinterctl_unset.md  splinterctl_use.md  splinterctl_uuid.md  splinterctl_wasm.md  splinterctl_watch.md
integrations/: README.md
integrations/claude-code/: CLAUDE.md  README.md
integrations/claude-code/config/: agent.rc
integrations/claude-code/demo/: .gitkeep
integrations/claude-code/scripts/: spl-bootstrap  spl-ingest  spl-journal  spl-recall  spl-search  spl-signal  spl-status
integrations/codex/: .gitkeep
lume-website/: README.md  _config.ts  _data.json  _plugins.ts  deno.json  index.md  installing.md  plugins.ts  splinter.css  splinter_and_linux.md  splinter_performance.md  use_cases.md
lume-website/_includes/: footer.njk  head.njk  page.njk  splinter_home.njk
lume-website/_includes/partials/: footer.njk
lume-website/bindings/: index.md  java.md  lua.md  python.md  rust.md  shell.md  typescript.md
lume-website/cli/: index.md
lume-website/core/: index.md
lume-website/core/constants/: index.md
lume-website/core/examples/: index.md
lume-website/core/functions/: index.md  splinter_client_set_tandem.md  splinter_client_unset_tandem.md  splinter_close.md  splinter_config.md  splinter_create.md  splinter_create_or_open.md  splinter_enumerate_matches.md  splinter_get.md  splinter_get_embedding.md  splinter_get_epoch.md  splinter_get_header_snapshot.md  splinter_get_raw_ptr.md  splinter_get_signal_count.md  splinter_get_slot_snapshot.md  splinter_integer_op.md  splinter_list.md  splinter_open.md  splinter_open_numa.md  splinter_open_or_create.md  splinter_poll.md  splinter_pulse_watchers.md  splinter_set.md  splinter_set_embedding.md  splinter_set_label.md  splinter_set_named_type.md  splinter_set_slot_time.md  splinter_slot_usr.md  splinter_unset.md  splinter_watch_label_register.md  splinter_watch_register.md  splinter_watch_unregister.md
lume-website/core/structures/: index.md
lume-website/shards/: index.md
lume-website/src/: _data.yml  bindings.md  cli.md  core.md  index.md  shards.md  splinter_and_linux.md  splinter_performance.md  style.css
lume-website/src/_includes/layouts/: base.vto
lume-website/tests/: index.md
scripts/: bigbang.sh  fetch_nomic.sh  sync-rust-vendor.sh
specs/: README.md  issue-10.md  issue-14.md
website/: .gitignore  _config.ts  deno.json  plugins.ts
website/src/_components/: hero.vto
website/src/_data/: demo.yml  navbar.yml
website/src/_includes/layouts/: homepage.vto  og_images.jsx
website/src/_includes/templates/: docs-template.vto
website/src/blog/: splinter-0-5-0.mdx
website/src/pages/: quickstart.mdx
website/src/qs/: splinter-101.md
